--- a/README.org
+++ b/README.org
@@ -9,7 +9,6 @@
 | bans            | core_admin_channel |
 | unban           | core_admin_channel |
 | kick            | core_admin_channel |
-| remove          | core_admin_channel |
 | add             | datafiles          |
 | storyofpomfface | stupid             |
 | match           | core_admin_channel |
@@ -103,6 +102,7 @@
 | unmute   | core_admin_channel | unmute               | admin    |
 | lock     | core_admin_channel | lock                 | admin    |
 | unlock   | core_admin_channel | unlock               | admin    |
+| remove   | core_admin_channel | remave               | admin    |
 ** events
 | Event        | File      | New Event    | New File |
 |--------------+-----------+--------------+----------|
