Add ban commands, needs cleaning up like everythin

--- a/README.org
+++ b/README.org
@@ -6,9 +6,6 @@
 ** admin
 | Command         | File               |
 |-----------------+--------------------|
-| ban             | core_admin_channel |
-| bans            | core_admin_channel |
-| unban           | core_admin_channel |
 | add             | datafiles          |
 | storyofpomfface | stupid             |
 | match           | core_admin_channel |
@@ -104,6 +101,10 @@
 | unlock   | core_admin_channel | unlock               | admin    |
 | remove   | core_admin_channel | remove               | admin    |
 | kick     | core_admin_channel | kick                 | admin    |
+| ban      | core_admin_channel | ban                  | admin    |
+| bans     | core_admin_channel | ban list             | admin    |
+| unban    | core_admin_channel | unban                | admin    |
+
 ** events
 | Event        | File      | New Event    | New File |
 |--------------+-----------+--------------+----------|
