Literally everything, only god knows now.

--- a/README.org
+++ b/README.org
@@ -1,3 +1,7 @@
+* TODO
+- Take another look at the disable code
+- finish cleaning admin.py
+- refine typing?
 * To Add
 ** gadmin
 | Command   | File               |
